# MOVE-r

./: .gitmodules  CMakeLists.txt  MOVE-r-build.cpp  MOVE-r-count.cpp  MOVE-r-genpatterns.cpp  MOVE-r-locate.cpp  MOVE-r-revert.cpp  README.md
internal/MOVE-r/: MOVE-r.hpp
internal/MOVE-r/MOVE-r/: build.hpp  count.cpp  load.cpp  locate.cpp  revert.cpp
internal/coding/: delta_vector.hpp  huff_string.hpp  par_delta_vector.hpp  par_huff_string.hpp  par_var_width_vector.hpp
internal/mds/: mds_lf.hpp  mds_phi.hpp
internal/mds/mds_builder/: mds_builder.hpp
internal/mds/mds_builder/mds_builder/: common.cpp  v1.cpp
internal/mds/mds_builder/mds_builder/balance/: v2_seq.cpp  v3_par.cpp  v3_seq.cpp  v4_par.cpp
internal/misc/: avl_tree.hpp  dg_io_nc.hpp  dl_list.hpp  utils.hpp
